--- a/aecid-testsuite/unit/data/configfiles/unknown_analysis_component.yml
+++ b/aecid-testsuite/unit/data/configfiles/unknown_analysis_component.yml
@@ -51,7 +51,7 @@ Analysis:
           learn_mode: True
           persistence_id: 'accesslog_request' # optional default: Default
           output_logline: False
-          allow_missing_values: False # optional default: False
+          allow_missing_values_flag: False # optional default: False
 
         - type: UnknownDetector
           target_path_list: ["/model/accesslog/request","/model/accesslog/status"]
