--- a/aecid-testsuite/unit/data/configfiles/double_parserstart_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/double_parserstart_config.yml
@@ -26,20 +26,20 @@ Input:
 
 Analysis:
         - type: NewMatchPathValueDetector
-          paths: ["/model/accesslog/status"]
+          target_path_list: ["/model/accesslog/status"]
           persistence_id: 'accesslog_status' # optional default: Default
           output_logline: False
           learn_mode: True
 
         - type: NewMatchPathValueComboDetector
-          paths: ["/model/accesslog/request","/model/accesslog/method"]
+          target_path_list: ["/model/accesslog/request","/model/accesslog/method"]
           learn_mode: True
           persistence_id: 'accesslog_request' # optional default: Default
           output_logline: False
-          allow_missing_values: False # optional default: False
+          allow_missing_values_flag: False # optional default: False
 
         - type: NewMatchPathValueComboDetector
-          paths: ["/model/accesslog/request","/model/accesslog/status"]
+          target_path_list: ["/model/accesslog/request","/model/accesslog/status"]
           learn_mode: True
 
 EventHandlers:
