--- a/source/root/etc/aminer/template_config.yml
+++ b/source/root/etc/aminer/template_config.yml
@@ -119,20 +119,20 @@ Input:
 
 Analysis:
         - type: "NewMatchPathValueDetector"
-          paths: ["/model/accesslog/status"]
+          target_path_list: ["/model/accesslog/status"]
           persistence_id: 'accesslog_status' # optional default: Default
           output_logline: false
           learn_mode: true
 
         - type: "NewMatchPathValueComboDetector"
-          paths: ["/model/accesslog/request","/model/accesslog/method"]
+          target_path_list: ["/model/accesslog/request","/model/accesslog/method"]
           learn_mode: true
           persistence_id: 'accesslog_request' # optional default: Default
           output_logline: false
-          allow_missing_values: false # optional default: false
+          allow_missing_values_flag: false # optional default: false
 
         - type: "NewMatchPathValueComboDetector"
-          paths: ["/model/accesslog/request","/model/accesslog/status"]
+          target_path_list: ["/model/accesslog/request","/model/accesslog/status"]
           learn_mode: true
 
 EventHandlers:
