--- a/aecid-testsuite/demo/aminerJsonInputDemo/json-eve-demo.yml
+++ b/aecid-testsuite/demo/aminerJsonInputDemo/json-eve-demo.yml
@@ -983,7 +983,7 @@ Parser:
              notafter: notafter
 
 Input:
-        timestamp_path_list: None
+        timestamp_paths: None
         json_format: True
 
 EventHandlers:
