--- a/aecid-testsuite/unit/data/configfiles/bigger_than_or_equal_error.yml
+++ b/aecid-testsuite/unit/data/configfiles/bigger_than_or_equal_error.yml
@@ -15,7 +15,7 @@ Parser:
 
 Input:
         multi_source: False # optional
-        timestamp_path_list: "/model/accesslog/time"
+        timestamp_paths: "/model/accesslog/time"
 
 Analysis:
         - type: EventTypeDetector
