--- a/aecid-testsuite/unit/data/configfiles/multiSource_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/multiSource_config.yml
@@ -19,16 +19,16 @@ Parser:
 
 Input:
         multi_source: True # optional
-        timestamp_path_list: "/model/accesslog/time"
+        timestamp_paths: "/model/accesslog/time"
 
 Analysis:
         - type: NewMatchPathValueDetector
           id: NewMatchPathValueDetector
-          target_path_list: ["/accesslog/status"]
+          paths: ["/accesslog/status"]
           learn_mode: True
         - type: NewMatchPathValueComboDetector
           id: NewMatchPathValueComboDetector
-          target_path_list: ["/accesslog/method","/accesslog/request","/accesslog/useragent"]
+          paths: ["/accesslog/method","/accesslog/request","/accesslog/useragent"]
           learn_mode: False
 
 EventHandlers:
