--- a/aecid-testsuite/unit/data/configfiles/filter_config_errors.yml
+++ b/aecid-testsuite/unit/data/configfiles/filter_config_errors.yml
@@ -23,19 +23,19 @@ Parser:
 
 Input:
         multi_source: False
-        timestamp_path_list: "/model/accesslog/time"
+        timestamp_paths: "/model/accesslog/time"
 
 Analysis:
         - type: ParserCount
           id: ParserCount
-          target_path_list: ["/model/accesslog/status"]
+          paths: ["/model/accesslog/status"]
           report_interval: 10
           reset_after_report_flag: False # this attribute does not exist
           learn_mode: True # this attribute does not exist
 
         - type: NewMatchPathValueComboDetector
           id: NewMatchPathValueComboDetector1
-          target_path_list: ["/model/accesslog/request","/model/accesslog/method"]
+          paths: ["/model/accesslog/request","/model/accesslog/method"]
           learn_mode: True
           persistence_id: 'accesslog_request'
           output_logline: False
