--- a/aecid-testsuite/unit/data/configfiles/multiple_components_null_analysis_components.yml
+++ b/aecid-testsuite/unit/data/configfiles/multiple_components_null_analysis_components.yml
@@ -114,7 +114,7 @@ Parser:
                   - sq6
 
 Input:
-        timestamp_path_list: "/accesslog/time"
+        timestamp_paths: "/accesslog/time"
 
 Analysis: null
 
