--- a/aecid-testsuite/unit/data/configfiles/multiple_components_null_event_handlers.yml
+++ b/aecid-testsuite/unit/data/configfiles/multiple_components_null_event_handlers.yml
@@ -142,7 +142,7 @@ Analysis:
           outlier_bins_flag: True
         - type: HistogramAnalysis
           id: HistogramAnalysis
-          histogram_definitions: [["/model/RandomTime/Random", "linear_numeric_bin_definition"]]
+          histogram_defs: [["/model/RandomTime/Random", "linear_numeric_bin_definition"]]
           report_interval: 10
           output_logline: True
         - type: PathDependentHistogramAnalysis
