--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,3 +20,10 @@ repos:
     hooks:
     - id: flake8
       args: [--max-line-length=140]
+
+-   repo: https://github.com/pre-commit/mirrors-autopep8
+    rev: 1.7.0
+    hooks:
+    - id: autopep8
+      args: [--max-line-length=140]
+
