added check so EXP_TYPE_MANDATORY is enforced.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,4 +25,4 @@ repos:
     rev: v1.7.0
     hooks:
     - id: autopep8
-      args: [--max-line-length=140]
+      args: [--max-line-length=140, --diff]
