--- a/aecid-testsuite/config
+++ b/aecid-testsuite/config
@@ -1,4 +1,3 @@
 # This file holds global config variables for the test-scripts
-KAFKA_VERSIONSTRING="kafka_2.13-2.8.1"
-KAFKA_URL="https://mirror.klaus-uwe.me/apache/kafka/2.8.1/kafka_2.13-2.8.1.tgz"
-
+KAFKA_VERSIONSTRING="kafka_2.13-2.8.2"
+KAFKA_URL="https://archive.apache.org/dist/kafka/2.8.2/kafka_2.13-2.8.2.tgz"
