--- a/source/root/lib/systemd/system/aminer.service
+++ b/source/root/lib/systemd/system/aminer.service
@@ -8,6 +8,7 @@ ExecStartPre=/usr/bin/touch /var/log/aminer.log
 ExecStartPre=/bin/chown aminer:aminer /var/log/aminer.log
 ExecStart=/usr/lib/logdata-anomaly-miner/aminer.py --config /etc/aminer/config.yml
 KillMode=control-group
+Restart=on-failure
 # Write everything to /dev/null: if aminer is misconfigured, it
 # may detect anonamies in its own log data, thus creating a logging
 # loop. You may prefer logging to journal only, which needs journald
