--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,7 @@ repos:
     hooks:
     - id: flake8
       args: [--max-line-length=140]
+      exclude: ^aecid-testsuite/
 
 -   repo: https://github.com/pre-commit/mirrors-autopep8
     rev: v1.7.0
