--- a/aecid-testsuite/demo/aminerJsonInputDemo/json-input-demo-config.yml
+++ b/aecid-testsuite/demo/aminerJsonInputDemo/json-input-demo-config.yml
@@ -84,12 +84,14 @@ Analysis:
             - "/model/menu/id"
             - "/model/menu/value"
           learn_mode: True
+          output_logline: True
         - type: NewMatchPathValueDetector
           id: NewMatchPathValue
           paths:
             - "/model/menu/id"
             - "/model/menu/value"
           learn_mode: True
+          output_logline: True
         - type: SimpleUnparsedAtomHandler
           id: SimpleUnparsedAtomHandler
 
