--- a/aecid-testsuite/demo/aminer/demo-config.yml
+++ b/aecid-testsuite/demo/aminer/demo-config.yml
@@ -34,6 +34,8 @@ Log.StatisticsLevel: 1
 
 Log.DebugLevel: 1
 
+AminerId: 'demo-aminer'
+
 Parser:
        - id: space
          type: FixedDataModelElement
