--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -13,6 +13,7 @@ enabled = true
   [analyzers.meta]
   runtime_version = "3.x.x"
   max_line_length = 140
+  cyclomatic_complexity_threshold = "critical"
 
 [[analyzers]]
 name = "test-coverage"
