--- a/aecid-testsuite/Dockerfile
+++ b/aecid-testsuite/Dockerfile
@@ -18,7 +18,10 @@
 #
 
 # Pull base image.
-FROM debian:bullseye
+FROM debian:bookworm
+
+# allow the system to use two package managers (apt and pip), as we do it intentionally (needed since Debain Bookworm - see PEP 668
+ENV PIP_BREAK_SYSTEM_PACKAGES=1
 
 # Set local timezone
 ENV TZ=Europe/Vienna
